# SatiSPeech-2025

./: .gitignore  README.md  SatiSPeech2025Baseline.ipynb  SatiSPeech2025Submission.ipynb  exploration.ipynb  pyproject.toml  requirements.txt
embed_scripts/: embed.py  trans_fasttext.py  trans_hubert.py  trans_mfccs.py  trans_roberta.py  trans_wav2vec2.py  trans_wav2vec2BERT.py  trans_word2vec.py  vec_utils.py  verify_fasttext.py  verify_roberta.py  verify_word2vec.py
scripts/: classif_utils.py  combi_script.py  fusion_utils.py  keras_utils.py  text_script.py
train_scripts/: classif_utils.py  combi_script.py  fusion_utils.py  keras_utils.py  single_script.py  text_script.py  val_results.py
