[project]
name = "tfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.2.2",
    "accelerate==1.6.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "anyio==4.9.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "astroid==3.3.10",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "audioread==3.0.1",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill==0.3.8",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "fasttext-wheel==0.9.2",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fonttools==4.57.0",
    "fqdn==1.5.1",
    "frozenlist==1.6.0",
    "fsspec==2024.12.0",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.71.0",
    "h11==0.16.0",
    "h5py==3.13.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.6",
    "isoduration==20.11.0",
    "isort==6.0.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "json5==0.12.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.1",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.14",
    "keras==3.9.2",
    "keras-tuner==1.4.7",
    "kiwisolver==1.4.8",
    "kt-legacy==1.0.5",
    "lazy-loader==0.4",
    "libclang==18.1.1",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "ml-dtypes==0.5.1",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.4.3",
    "multiprocess==0.70.16",
    "namex==0.0.9",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "notebook==7.4.1",
    "notebook-shim==0.2.4",
    "numba==0.61.0",
    "numpy==2.1.0",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "opt-einsum==3.4.0",
    "optree==0.15.0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.6",
    "plyer==2.1.0",
    "pooch==1.8.2",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pybind11==2.13.6",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pylint==3.3.7",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.0.0",
    "rpds-py==0.24.0",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "setuptools==79.0.1",
    "six==1.17.0",
    "smart-open==7.1.0",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "soupsieve==2.7",
    "soxr==0.5.0.post1",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.19.0",
    "termcolor==3.0.1",
    "terminado==0.18.1",
    "tf-keras==2.19.0",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.1",
    "tomlkit==0.13.3",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.51.3",
    "triton==3.3.0",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.13.0",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.20.0",
]

